...

  return (
    <ScrollView>
      <View>
        <View style={{ padding: 12 }}>
          <Text testID="Test View" accessible accessibilityLabel="Test View">
            Unit Tests
          </Text>
          <View
            style={{ flexDirection: "row", justifyContent: "space-between" }}
          >
            <Text>
              Running {completedTests}/{tests.length}
            </Text>

            {completedTests == tests.length && (
              <Text
                testID="tests-complete"
                accessible
                accessibilityLabel="tests-complete"
              >
                Done
              </Text>
            )}
...
